# Collaborative-Control-of-Bimanual-Robotic-Arms-WX250-and-GeomagicTouch-Mapping

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/control/lib/control/: teleop
install/control/share/control/: package.sh  package.xml
install/dynamixel_workbench_toolbox/include/dynamixel_workbench_toolbox/: dynamixel_driver.h  dynamixel_item.h  dynamixel_tool.h  dynamixel_workbench.h
install/dynamixel_workbench_toolbox/share/dynamixel_workbench_toolbox/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/interbotix_common_modules/share/interbotix_common_modules/: package.sh  package.xml
install/interbotix_common_sim/share/interbotix_common_sim/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/interbotix_common_toolbox/share/interbotix_common_toolbox/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/interbotix_gravity_compensation/lib/interbotix_gravity_compensation/: interbotix_gravity_compensation
install/interbotix_gravity_compensation/share/interbotix_gravity_compensation/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/interbotix_moveit_interface/lib/interbotix_moveit_interface/: moveit_interface  moveit_interface_gui
install/interbotix_moveit_interface/share/interbotix_moveit_interface/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/interbotix_moveit_interface_msgs/share/interbotix_moveit_interface_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/interbotix_perception_modules/lib/interbotix_perception_modules/: armtag_tuner_gui  picture_snapper  pointcloud_tuner_gui
install/interbotix_perception_modules/share/interbotix_perception_modules/: package.sh  package.xml
install/wx250_bringup/share/wx250_bringup/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/wx250_bringup/share/wx250_bringup/config/: servo.yaml  servo_params.yaml
install/wx250_bringup/share/wx250_bringup/launch/: wx250_full_teleop.launch.py  wx250_geomagic_allinone.launch.py  wx250_geomagic_teleop_sim.launch.py  wx250_interface_bridge.launch.py  wx250_moveit_bulletproof.launch.py  wx250_moveit_teleop.launch.py  wx250_rviz.launch.py  wx250_servo_teleop.launch.py
log/: latest_build
src/control/: package.xml  setup.py
src/control/control/: teleop.py
src/wx250_bringup/: setup.cfg  setup.py
src/wx250_bringup/config/: servo_params_fixed.yaml
src/wx250_bringup/launch/: wx250_geomagic_allinone.launch.py
src/wx250_bringup/scripts/: test_moveit_cmd.py
src/wx250_bringup/wx250_bringup/: geomagic_servo.py  robot_to_geomagic_feedback.py  servo_to_interbotix_bridge.py
src/wx250_geomagic_teleop/: CMakeLists.txt  package.xml  setup.py
src/wx250_geomagic_teleop/resource/: wx250_geomagic_teleop
src/wx250_geomagic_teleop/wx250_geomagic_teleop/: geomagic_to_wx250_moveit.py  virtual_geomagic.py
(+1329 files in other folders)
