<?xml version="1.0"?>
<package format="3">
  <name>wx250_geomagic_teleop</name>
  <version>0.0.1</version>
  <description>Geomagic Touch teleoperation for Interbotix WX250 (ROS 2)</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>interbotix_xsarm_moveit_interface</depend>
  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
</package>
