<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>wx250_bringup</name>
  <version>0.0.1</version>
  <description>Bringup + MoveIt Servo + RViz for wx250 teleoperation</description>

  <maintainer email="ishabh@todo.todo">ishabh</maintainer>
  <license>TODO</license>

  <!-- runtime / exec depends -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- MoveIt core + Servo -->
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_servo</exec_depend>

  <!-- Interbotix description + MoveIt config packages -->
  <exec_depend>interbotix_xsarm_descriptions</exec_depend>
  <exec_depend>interbotix_xsarm_moveit</exec_depend>

  <!-- tests (optional, keep them if you like) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

